--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,9 +62,9 @@ jobs:
           name: Back-end build
           command: |
              # Your code here
-             cd frontend
+             cd backend
              npm install
-            npm run build
+             npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
