added tests /scan

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,7 +120,7 @@ jobs:
           keys:[frontend build]
       - run:
           name: Analyse frontend
-          command: 
+          command: |
             cd frontend
             npm install
             npm audit --audit-level=critical
@@ -134,7 +134,7 @@ jobs:
           keys:[backend build]
       - run:
           name: Analyse backend
-          command: 
+          command: |
             cd backend
             npm install
             npm audit --audit-level=critical
