--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,6 +123,7 @@ jobs:
           command: |
             cd frontend
             npm install
+            # npm audit fix --audit-level=critical
             npm audit --audit-level=critical
       
   scan-backend:
@@ -137,6 +138,7 @@ jobs:
           command: |
             cd backend
             npm install
+            # npm audit fix --audit-level=critical
             npm audit --audit-level=critical
 
 
