--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,7 +123,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            # npm audit fix --audit-level=critical
+            npm audit fix --audit-level=critical
             npm audit --audit-level=critical
       
   scan-backend:
@@ -138,7 +138,7 @@ jobs:
           command: |
             cd backend
             npm install
-            # npm audit fix --audit-level=critical
+            npm audit fix --audit-level=critical
             npm audit --audit-level=critical
 
 
