--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,16 @@
 version: 2.1
 
-# commands:
+ordbs:
+    slack:circleci/slack@4.9.3
+
+
+commands:
+    notify_on_failure:
+        steps:
+          - slack/notify:
+              event: fail
+              channel: cicd-pipeline
+              template: basic_fail_1
 #   destroy-environment:
 #     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
 #     parameters:
@@ -47,9 +57,11 @@ jobs:
             cd frontend
             npm install
             npm run build
+            exit 1
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
+      - notify_on_failure
 
   build-backend:
     docker:
@@ -68,6 +80,8 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
+      - notify_on_failure
+      
 
   test-frontend:
     docker:
@@ -89,6 +103,8 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-test
+      - notify_on_failure
+      
                 
   test-backend:
     docker:
@@ -110,6 +126,8 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-test
+      - notify_on_failure
+      
             
   scan-frontend:
     docker:
@@ -126,6 +144,8 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
+      - notify_on_failure
+      
       
   scan-backend:
     docker:
@@ -142,6 +162,8 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
+      - notify_on_failure
+      
 
 
 #   deploy-infrastructure:
@@ -309,6 +331,15 @@ jobs:
 #               # your code here
 #             fi
             
+  notify_on_success:
+      docker:
+        - image:cimg/base:stable
+      steps:
+        - slack/notify:
+            event: pass
+            channel: cicd-pipeline
+            template: success_tagged_deploynment_1
+
 
 workflows:
   default:
@@ -323,6 +354,12 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
+      - notify_on_success:
+          requires:
+            - test-frontend
+            - test-backend
+            - scan-frontend
+            - scan-backend
       # - deploy-infrastructure:
       #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #     filters:
