--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,11 @@ version: 2.1
 orbs:
     slack: circleci/slack@4.9.3
 
+parameters:
+  workflow_id:
+    type: string
+    default: '${CIRCLE_WORKFLOW_ID:0:7}'
+
 
 commands:
     notify_on_failure:
@@ -61,7 +66,7 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
-      - notify_on_failure
+      # - notify_on_failure
 
   build-backend:
     docker:
@@ -80,7 +85,7 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
-      - notify_on_failure
+      # - notify_on_failure
       
 
   test-frontend:
@@ -103,7 +108,7 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-test
-      - notify_on_failure
+      # - notify_on_failure
       
                 
   test-backend:
@@ -126,7 +131,7 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-test
-      - notify_on_failure
+      # - notify_on_failure
       
             
   scan-frontend:
@@ -144,7 +149,7 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
-      - notify_on_failure
+      # - notify_on_failure
       
       
   scan-backend:
@@ -162,7 +167,10 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
-      - notify_on_failure
+      - slack/notify:
+          event: fail
+          template: basic_fail_1
+      # - notify_on_failure
       
 
 
@@ -331,14 +339,14 @@ jobs:
 #               # your code here
 #             fi
             
-  notify_on_success:
-      docker:
-        - image: cimg/base:stable
-      steps:
-        - slack/notify:
-            event: pass
-            channel: cicd-pipeline
-            template: success_tagged_deploynment_1
+  # notify_on_success:
+  #     docker:
+  #       - image: cimg/base:stable
+  #     steps:
+  #       - slack/notify:
+  #           event: pass
+  #           channel: cicd-pipeline
+  #           template: success_tagged_deploynment_1
 
 
 workflows:
@@ -354,12 +362,12 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
-      - notify_on_success:
-          requires:
-            - test-frontend
-            - test-backend
-            - scan-frontend
-            - scan-backend
+      # - notify_on_success:
+      #     requires:
+      #       - test-frontend
+      #       - test-backend
+      #       - scan-frontend
+      #       - scan-backend
       # - deploy-infrastructure:
       #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #     filters:
