--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs: 
-  slack: circleci/slack@4.10.1
+  slack: circleci/slack@4.1
 # test
 
 commands:
@@ -9,7 +9,7 @@ commands:
         steps:
           - slack/notify:
               event: fail
-              channel: cicd-pipeline
+              # channel: cicd-pipeline
               template: basic_fail_1
               
 #   destroy-environment:
