--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -235,8 +235,6 @@ jobs:
              ansible-playbook -i inventory.txt configure-server.yml
        - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      # Here's where you will add some code to rollback on failure      
-
   run-migrations:
     docker:
       - image: circleci/node:13.8.0 # safest to use to avoid migration errors
@@ -396,8 +394,8 @@ workflows:
       #         only: [test-feature-branch]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
+      # - run-migrations:
+      #     requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
       # - deploy-backend:
