--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -15,21 +15,23 @@
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
       wait_for_connection:
+        timeout: 600
 
     - name: "install python for Ansible."
-      apt:
-        name: python3
-        state: latest
-        update_cache: yes
+     become: true
+     raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+     changed_when: false
+      # apt:
+      #   name: python3
+      #   state: latest
+      #   update_cache: yes
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
-    # - NODE_ENV: production
-    # - ENVIRONMENT: production
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
     - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
     - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
-    - TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT')}}"
+    - TYPEORM_PORT: 5432
     - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
     - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
     - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
@@ -38,3 +40,4 @@
 
   roles:
      - configure-server
+    #  - configure-prometheus-node-exporter
