--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -425,7 +425,7 @@ workflows:
             - test-backend
             - scan-frontend
             - scan-backend
-      - deploy-infrastructure
+      - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
