--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -444,14 +444,14 @@ cloudfront-update:
 #               # your code here
 #             fi
             
-notify_on_success:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      - slack/notify:
-          event: pass
-          channel: cicd-pipeline
-          template: success_tagged_deploynment_1
+# notify_on_success:
+#     docker:
+#       - image: cimg/base:stable
+#     steps:
+#       - slack/notify:
+#           event: pass
+#           channel: cicd-pipeline
+#           template: success_tagged_deploynment_1
 
 
 workflows:
@@ -467,12 +467,12 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
-      - notify_on_success:
-          requires:
-            - test-frontend
-            - test-backend
-            - scan-frontend
-            - scan-backend
+      # - notify_on_success:
+      #     requires:
+      #       - test-frontend
+      #       - test-backend
+      #       - scan-frontend
+      #       - scan-backend
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
