--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,57 +1,46 @@
----
-- name: "Add Node.js from Nodesource"
-  become: true
-  shell: |
-    curl -sL https://deb.nodesource.com/setup_13.x | sudo -E bash -
-- name: "Install Node.js 13"
-  become: true
-  apt:
-    name: ["nodejs"]
-    state: latest
-    update_cache: yes
-
-- name: "Install PM2 Globally"
-  npm:
-    name: pm2
-    global: yes
-
-- name: "move env variables to /etc/profile.d/"
-  become: true
-  copy:
-    src: myenv.sh
-    dest: /etc/profile.d/ 
 # ---
-# - name: 'update and upgrade packages.'
-#   become: yes
+# - name: "Add Node.js from Nodesource"
+#   become: true
+#   shell: |
+#     curl -sL https://deb.nodesource.com/setup_13.x | sudo -E bash -
+# - name: "Install Node.js 13"
+#   become: true
 #   apt:
-#     upgrade: yes
-#     update_cache: yes
-#     cache_valid_time: 86400
-# - name: remove unneeded deps
-#   become: yes
-#   apt:
-#     autoremove: yes
-# - name: install deps
-#   become: yes
-#   apt:
-#     name: ['nodejs', 'npm']
+#     name: ["nodejs"]
 #     state: latest
 #     update_cache: yes
-# - name: install pm2
-#   become: yes
+
+# - name: "Install PM2 Globally"
 #   npm:
 #     name: pm2
 #     global: yes
-#     state: latest
-#     production: yes
-# - name: extract artifact
-#   become: yes
-#   unarchive:
-#     src: files/artifact.tar.gz
-#     dest: .
 
-# - name: start app
-#   become: yes
-#   shell: |
-#     pm2 delete all
-#     pm2 start npm -- start
+# - name: "move env variables to /etc/profile.d/"
+#   become: true
+#   copy:
+#     src: myenv.sh
+#     dest: /etc/profile.d/ 
+---
+- name: 'update and upgrade packages.' # sudo apt upgrade
+  become: yes
+  apt:
+    upgrade: yes
+    update_cache: yes
+    cache_valid_time: 86400
+- name: remove unneeded deps # sudo apt autoremove
+  become: yes
+  apt:
+    autoremove: yes
+- name: install deps # sudo apt install nodejs npm
+  become: yes
+  apt:
+    name: ['nodejs', 'npm']
+    state: latest
+    update_cache: yes
+- name: install pm2 # sudo npm install pm2 -g
+  become: yes
+  npm:
+    name: pm2
+    global: yes
+    state: latest
+    production: yes
