--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -295,10 +295,10 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - 'f5:9a:91:f5:a2:06:c2:ab:18:0e:6a:1f:f9:e6:76:1e'
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update --no-cache tar gzip ansible aws-cli
+      # - run:
+      #     name: Install dependencies
+      #     command: |
+            # apk add --update --no-cache tar gzip ansible aws-cli
       - attach_workspace:
           at: ~/
       - install_ansible
